message LocalFileMeta {
    optional string tag = 1;
    optional string reference = 2;
}
